--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,12 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 ] }
 
 anyhow = "1.0"
+tonic = { version = "0.12", features = ["transport"] }
+tonic-build = "0.12"
+prost = "0.13"
+prost-types = "0.13"
+tokio-stream = { version = "0.1", features = ["net"] }
+protoc-bin-vendored = "3"
 
 rustls = { version = "*", default-features = false, features = ["ring", "std"] }
 rustls-pemfile = "2"
