--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -6,6 +6,10 @@ edition.workspace = true
 [dependencies]
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tonic = { workspace = true }
+prost = { workspace = true }
+prost-types = { workspace = true }
+tokio-stream = { workspace = true }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -31,6 +35,7 @@ axum = { workspace = true }
 tokio-util = { workspace = true }
 
 quinn = { workspace = true }
+quinn-proto = { workspace = true }
 socket2 = { workspace = true }
 
 h3-quinn = { workspace = true }
@@ -42,3 +47,7 @@ rand = { workspace = true }
 rcgen = { version = "0.13", features = ["x509-parser"] }
 subtle = "2"
 x509-parser = "0.16"
+
+[build-dependencies]
+tonic-build = { workspace = true }
+protoc-bin-vendored = { workspace = true }
