feat(hysteria): split to a single feature

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -51,3 +51,7 @@ x509-parser = "0.16"
 [build-dependencies]
 tonic-build = { workspace = true }
 protoc-bin-vendored = { workspace = true }
+
+[features]
+hysteria = []
+default = ["hysteria"]
