feature(trojan): add the feature trojan

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -54,4 +54,5 @@ protoc-bin-vendored = { workspace = true }
 
 [features]
 hysteria = []
-default = ["hysteria"]
+trojan = []
+default = ["hysteria", "trojan"]
