feat(ws): add the ws feature

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -54,5 +54,6 @@ protoc-bin-vendored = { workspace = true }
 
 [features]
 hysteria = []
-trojan = []
+trojan = ["ws"]
+ws = []
 default = ["hysteria", "trojan"]
