feat(tls): add the tls feature for tls stream

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -54,6 +54,7 @@ protoc-bin-vendored = { workspace = true }
 
 [features]
 hysteria = []
-trojan = ["ws"]
+trojan = []
 ws = []
-default = ["hysteria", "trojan"]
+tls = []
+default = ["hysteria", "trojan", "ws", "tls"]
