feat(reality): add the reality feature

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -57,4 +57,5 @@ hysteria = []
 trojan = []
 ws = []
 tls = []
-default = ["hysteria", "trojan", "ws", "tls"]
+reality = []
+default = ["hysteria", "trojan", "ws", "tls", "reality"]
