feat(vless): add the vless feature

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -58,4 +58,5 @@ trojan = []
 ws = []
 tls = []
 reality = []
-default = ["hysteria", "trojan", "ws", "tls", "reality"]
+vless = []
+default = ["hysteria", "trojan", "ws", "tls", "reality", "vless"]
