feat(api): add the api feature

--- a/chimera_server_lib/Cargo.toml
+++ b/chimera_server_lib/Cargo.toml
@@ -60,6 +60,6 @@ tls = []
 reality = []
 vless = []
 traffic = []
-api = ["tonic", "prost", "prost-types", "tokio-stream"]
+# api = ["tonic", "prost", "prost-types", "tokio-stream"]
 default = ["hysteria", "trojan", "ws", "tls", "reality", "vless"]
 # default = ["trojan", "ws", "tls"]
